source/objects/Sales_Invoice_Payment__c/Sales_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice Payment Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>