source/objects/Sales_Invoice_Payment__c/fields/Payment_Recordkey__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recordkey__c</fullName>
    <label>Payment Recordkey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>