source/objects/Sales_Invoice_Payment__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoice Payment Details</relationshipLabel>
    <relationshipName>Sales_Invoice_Payment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>